feat: add find products by Filters
