# internal/domain/dtos/product_request.dto.go
@@ -1,0 +1,5 @@
+package dtos
+
+type ProductRequest struct {
+	SearchQuery string
+}
