# internal/infraestructure/repositories/product.repository.go
@@ -1,7 +1,9 @@
 package repositories
 
 import (
+	"col-moda/internal/domain/dtos"
 	"col-moda/internal/domain/entities"
+	"fmt"
 
 	"gorm.io/gorm"
 )
@@ -18,18 +20,26 @@ func NewProductRepository(db *gorm.DB) *ProductRepository {
 	}
 }
 
-func (r RoleRepository) FindProductsByFilters(searchQuery string) ([]entities.Product, error) {
+func (r ProductRepository) FindProductsByFilters(productsRequest dtos.ProductRequest) ([]entities.Product, error) {
 	var products []entities.Product
 
 	query := `
-        SELECT * FROM products 
-        WHERE to_tsvector(name || ' ' || description) @@ plainto_tsquery(?)
-        ORDER BY ts_rank(to_tsvector(name || ' ' || description), plainto_tsquery(?)) DESC`
+    SELECT * FROM products 
+    WHERE to_tsvector(name || ' ' || short_description || ' ' || long_description) @@ to_tsquery(? || ':*')
+    ORDER BY ts_rank(to_tsvector(name || ' ' || short_description || ' ' || long_description), to_tsquery(? || ':*')) DESC`
 
-	e := r.db.Raw(query, searchQuery, searchQuery).Scan(&products)
+	e := r.db.Raw(query, productsRequest.SearchQuery, productsRequest.SearchQuery).Scan(&products)
 
 	if e.Error != nil {
 		return nil, e.Error
+	}
+
+	fmt.Println("Parámetro de búsqueda")
+	fmt.Println(productsRequest.SearchQuery)
+
+	if len(products) != 0 {
+		fmt.Println("Resultado")
+		fmt.Println(products[0].Name)
 	}
 
 	return products, nil
